# solaris-userland

./: .hgignore  .hgignore.template  .hgtags  CONTRIBUTING.md  Makefile  README.md  build_spec.yaml
components/: Makefile
components/x11/lib/libX11/files/modules/lc/gb18030/: Makefile.am  lcGB18030.c
doc/: gate-mechanics.txt  makefile-targets.txt  makefile-variables.txt  manifest-check.txt  packaging.txt  testing.txt
exception_lists/: binary_files  cddlchk  cdm  check_rtime  copyright  keywords  permchk  secretchk  spell
licenses/: Artistic
make-rules/: ant.mk  attpackagemake.mk  cargo-vendored.mk  cargo.mk  cmake.mk  common.mk  component-report  configure.mk  environment.mk  experimental-only.mk  font.mk  gem.mk  gnome-component.mk  gnu-component.mk  install.rb.mk  ips-buildinfo.mk  ips.mk  justmake.mk  lint-libraries.mk  makemaker.mk  meson.mk  ninja.mk  pkg_install.mk  pkgobjs.mk  prep-download.mk  prep-git.mk  prep-hg.mk  prep-patch.mk  prep-svn.mk  prep-unpack.mk  puppetmodule.mk  pybuild.mk  python-common.mk  python-multiver.mk  python-venv-test.mk  ruby.mk  setup.py.mk  shared-macros.mk  test-x11.mk  waf.mk  (+1 more)
tools/: Makefile  backout  bass-o-matic  create_vncpasswd_file  full-build  gen-components  generate-history  generate_font_metadata.pl  manifest-check  manifest-generate  notifications.cfg  parfait-diff  pkglint  pkglint.sh  pkglintrc  process-required-packages.pl  pycodestyle.cfg  pydepend  pyimportmap  pyinstaller  repeat_cmd  replace_auto_fmri  time.c  update-required-packages  userland-components  userland-fetch  userland-incorporator  userland-mangler  userland-payload-checksum  userland-unpack
transforms/: REQUIRED_PACKAGES  X-incorporation  actuators  auto_fmri  autopyc  defaults  devel  docs  generate-cleanup  incorporate  legacy  locale  manifest-check-cleanup  manifest-metadata-template  pkg_install.package  pkg_install.version-lock  print-pkgs  print-published-pkgs  python-3-groups  python-3-no-32bit  python-rename  (+5 more)
(+12501 files in other folders)
